--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["TerraDOOM <look4totte@gmail.com>"]
 edition = "2018"
 
 [features]
-default = []
+default = ["vulkan"]
 metal = ["gfx-backend-metal"]
 dx12 = ["gfx-backend-dx12"]
 vulkan = ["gfx-backend-vulkan"]
@@ -16,6 +16,7 @@ gfx-hal = "0.1.0"
 arrayvec = "0.4"
 slog = "2.4.1"
 slog-stdlog = "3.0.2"
+shaderc = "0.3"
 
 [dependencies.gfx-backend-vulkan]
 version = "0.1"
