--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,39 +1,43 @@
 [package]
-name = "rmge"
-version = "0.1.0"
 authors = ["TerraDOOM <look4totte@gmail.com>"]
 edition = "2018"
-
-[features]
-default = ["vulkan"]
-metal = ["gfx-backend-metal"]
-dx12 = ["gfx-backend-dx12"]
-vulkan = ["gfx-backend-vulkan"]
-
+name = "rmge"
+version = "0.1.0"
 [dependencies]
-winit = "0.18"
-gfx-hal = "0.1.0"
 arrayvec = "0.4"
+gfx-hal = "0.1.0"
+image = "0.21"
+shaderc = "0.3"
 slog = "2.4.1"
 slog-stdlog = "3.0.2"
-shaderc = "0.3"
-image = "0.21"
+winit = "0.18"
 
 [dependencies.gfx-backend-vulkan]
-version = "0.1"
 optional = true
-
-[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
 version = "0.1"
-optional = true
-
-[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
-version = "0.1"
-optional = true
 
 [dev-dependencies]
-slog-term = "2.4.0"
 slog-async = "2.3.0"
+slog-term = "2.4.0"
 
 [[example]]
 name = "main"
+
+[features]
+default = ["vulkan"]
+dx12 = ["gfx-backend-dx12"]
+metal = ["gfx-backend-metal"]
+vulkan = ["gfx-backend-vulkan"]
+
+[target]
+[target."cfg(target_os = \"macos\")"]
+[target."cfg(target_os = \"macos\")".dependencies]
+[target."cfg(target_os = \"macos\")".dependencies.gfx-backend-metal]
+optional = true
+version = "0.1"
+
+[target."cfg(windows)"]
+[target."cfg(windows)".dependencies]
+[target."cfg(windows)".dependencies.gfx-backend-dx12]
+optional = true
+version = "0.1"
